--- a/More Strings and Regex/More Strings and Regex - BK.ipynb
+++ b/More Strings and Regex/More Strings and Regex - BK.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -27,7 +27,18 @@
    "source": [
     "# importing different packages\n",
     "import re\n",
-    "import codecs"
+    "import codecs\n",
+    "\n",
+    "# importing additional packages\n",
+    "\n",
+    "# datascience is a library that was created for Data 8\n",
+    "# it is mainly used for creating and manipulating tables\n",
+    "from datascience import *\n",
+    "%matplotlib inline\n",
+    "\n",
+    "# pandas is similar to datascience, but has more features, \n",
+    "# though with those features come a steeper learning curve\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -39,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -26378,7 +26389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -31657,7 +31668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -32189,7 +32200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -32672,7 +32683,7 @@
        " 'bassador in Rome\\r\\n1568-79, viceroy of Naples 1579-82; principal\\r\\nadvisor to Philip II on forei']"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32691,7 +32702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -32768,13 +32779,13 @@
        " 'to Philip II on foreign policy, 1583—6:\\r\\nand England, 165, 169, 180-1, 185; and France,\\r\\n171-2; a']"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#let's try the same thing again, but now with a frequently mentinoed country\n",
+    "#let's try the same thing again, but now with a frequently mentioned country\n",
     "info_england = re.findall('[\\S\\s]{,45}England[\\S\\s]{,45}', read_text)\n",
     "info_england_parsed = []\n",
     "for elem in info_england:\n",
@@ -32782,6 +32793,151 @@
     "        info_england_parsed.append(elem)\n",
     "info_england_parsed\n",
     "#What are ways that you could improve this query?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Philip', 'Mary', 'Tudor', 'England', 'Philip', 'England', '1555'],\n",
+       " ['Huguenots', 'Philip', 'England', 'Alba', 'Ne', '1573'],\n",
+       " ['Emperor', 'New', 'England', 'Philip', 'Northe', '1612', '1573'],\n",
+       " ['France', 'England', 'Three', 'Turks', 'Philip'],\n",
+       " ['Dutch',\n",
+       "  'Philip',\n",
+       "  'Us',\n",
+       "  'Mediterranean',\n",
+       "  'England',\n",
+       "  'France',\n",
+       "  'Netherlands',\n",
+       "  'Americas',\n",
+       "  'Asia',\n",
+       "  'Africa'],\n",
+       " ['England', 'Philip'],\n",
+       " ['Philip', 'Spain', 'England', 'Netherlands'],\n",
+       " ['England', 'Philip', '1555'],\n",
+       " ['Philip', 'Court', 'England', 'Netherlands', 'Spain', 'The', '1557', '1566'],\n",
+       " ['Philip', 'Elizabeth', 'England'],\n",
+       " ['England', 'Philip'],\n",
+       " ['Philip', 'England'],\n",
+       " ['England', 'Philip'],\n",
+       " ['Philip', 'England', 'Elizabeth'],\n",
+       " ['Philip', 'Queen', 'Mary', 'Tudor', 'England', 'This'],\n",
+       " ['Sardinia', 'Spain', 'In', 'England', 'Philip', '1557'],\n",
+       " ['Philip', 'England'],\n",
+       " ['England', 'Protestant', 'Philip'],\n",
+       " ['Philip', 'England'],\n",
+       " ['Philip', 'England', 'But'],\n",
+       " ['England', 'Philip'],\n",
+       " ['Philip', 'Netherlands', 'England', 'France'],\n",
+       " ['England', 'Philip'],\n",
+       " ['Even', 'England', 'Netherlands', 'Philip'],\n",
+       " ['Enterprise', 'England', 'Alba', 'Philip'],\n",
+       " ['Pius', 'Philip', 'England', 'Catholicism', 'Since'],\n",
+       " ['Philip', 'England', 'France', 'German'],\n",
+       " ['God', 'England', 'Philip'],\n",
+       " ['Alba', 'England', 'Spain', 'Philip'],\n",
+       " ['Catholicize', 'England', 'Philip', '1550'],\n",
+       " ['England', 'Philip'],\n",
+       " ['Philip', 'England', 'As', '1559'],\n",
+       " ['Philip', 'England', 'This'],\n",
+       " ['England', 'Philip', 'Monarc'],\n",
+       " ['England', 'Scotland', 'Ireland', 'Philip'],\n",
+       " ['England', 'Philip'],\n",
+       " ['England', 'Sixtus', 'Philip'],\n",
+       " ['England', 'Philip'],\n",
+       " ['Philip', 'England', 'Both'],\n",
+       " ['England', 'Philip'],\n",
+       " ['Spain', 'Philip', 'England', 'January', '1588'],\n",
+       " ['Spain', 'England', 'In', 'Philip'],\n",
+       " ['Philip', 'England'],\n",
+       " ['Philip', 'Grand', 'Strategy', 'England', 'Precisely'],\n",
+       " ['Philip', 'England'],\n",
+       " ['Philip', 'Grand', 'Strategy', 'England', 'Italy'],\n",
+       " ['Philip', 'England', 'Savoyard'],\n",
+       " ['Philip', 'England'],\n",
+       " ['Lisbon', 'Algiers', 'Earache', 'England', 'Philip'],\n",
+       " ['As', 'Philip', 'England', 'Parma'],\n",
+       " ['England', 'Philip', 'Corunna', '1554'],\n",
+       " ['Armada', 'Philip', 'Ps', 'England', '1588'],\n",
+       " ['Philip', 'England', 'His'],\n",
+       " ['England', 'Philip'],\n",
+       " ['England', 'Philip', 'Spanish', 'Yo', '1543', '1554'],\n",
+       " ['Thus', 'England', 'Philip', '1586'],\n",
+       " ['Royal', 'Navy', 'Philip', 'England', '1572'],\n",
+       " ['Philip', 'England', 'Rodriguez', 'Salgado', 'Chang', '1558'],\n",
+       " ['Philip', 'England', 'Cambridge', 'Unive'],\n",
+       " ['Marseilles', 'England', 'Philip', 'Medina', 'Sidon'],\n",
+       " ['England', 'Mendoza', 'Philip'],\n",
+       " ['England', 'Estado', 'Parma', 'Philip'],\n",
+       " ['Philip', 'Ps', 'Essex', 'England', 'Farnese', 'Alexander', 'Parma'],\n",
+       " ['Philip', 'England', 'Philip', 'Ps', '1557'],\n",
+       " ['Papacy', 'Charles', 'England', 'Ferrara', 'Philip'],\n",
+       " ['Philip', 'Enterprise', 'England'],\n",
+       " ['Philip', 'England', 'France', '1583']]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date_words = [re.findall('[A-Z][a-z]+',elem) + re.findall('\\d{4}', elem) for elem in info_england_parsed if re.search('[A-Z][a-z]+', elem)]\n",
+    "date_words\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1543': ['England', 'Philip', 'Spanish', 'Yo', '1543', '1554'],\n",
+       " '1550': ['Catholicize', 'England', 'Philip', '1550'],\n",
+       " '1554': ['England', 'Philip', 'Spanish', 'Yo', '1543', '1554'],\n",
+       " '1555': ['England', 'Philip', '1555'],\n",
+       " '1557': ['Philip', 'England', 'Philip', 'Ps', '1557'],\n",
+       " '1558': ['Philip', 'England', 'Rodriguez', 'Salgado', 'Chang', '1558'],\n",
+       " '1559': ['Philip', 'England', 'As', '1559'],\n",
+       " '1566': ['Philip',\n",
+       "  'Court',\n",
+       "  'England',\n",
+       "  'Netherlands',\n",
+       "  'Spain',\n",
+       "  'The',\n",
+       "  '1557',\n",
+       "  '1566'],\n",
+       " '1572': ['Royal', 'Navy', 'Philip', 'England', '1572'],\n",
+       " '1573': ['Emperor', 'New', 'England', 'Philip', 'Northe', '1612', '1573'],\n",
+       " '1583': ['Philip', 'England', 'France', '1583'],\n",
+       " '1586': ['Thus', 'England', 'Philip', '1586'],\n",
+       " '1588': ['Armada', 'Philip', 'Ps', 'England', '1588'],\n",
+       " 'Other': []}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_date_dict = {\"Other\":[]}\n",
+    "for x in range(1500,1600):\n",
+    "    for elem in date_words:\n",
+    "        if str(x) in elem:\n",
+    "            word_date_dict[str(x)] = elem\n",
+    "word_date_dict"
    ]
   },
   {
